<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="localization_category"
        app:title="@string/localization_category_title">

        <ListPreference
            app:key="language_list"
            app:title="@string/language_preference_title"
            app:summary="%s"
            app:dialogTitle="@string/language_preference_dialog_title"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="system" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="theme_category"
        app:title="@string/theme_category_title">

        <ListPreference
            app:key="theme_list"
            app:title="@string/theme_preference_title"
            app:summary="%s"
            app:dialogTitle="@string/theme_preference_dialog_title"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="system" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="storage_category"
        app:title="@string/storage_category_title">

        <Preference
            app:key="clear_cache"
            app:title="@string/clear_cache_title"
            app:summary="@string/clear_cache_summary" />
    </PreferenceCategory>

</PreferenceScreen>